[ios] Omnibox is too wide when opening a new tab on iPhone X landscape.

-headerForView is regularly called before self.headerView has been added
to the view hierarchy, so there's no simple way to get the correct
safeAreaInsets.  Since this situation is universally called for the full
screen new tab animation, it's safe to check the rootViewController's
view instead.

Bug: 784408
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Iadee7033eeb461bc4a10a28c8bd30c482afbb226
Reviewed-on: https://chromium-review.googlesource.com/780525
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518640}
Former-commit-id: 34b0c9f166247ca3652886df178d3e8ac7eacb8a